fix(CIN-3261): change structure of acs references for answers (#927)